# WaveRider

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEVLOG.md  README.md  README_zh.md  build_msvc_test.bat  test_main.cpp
skins/DarkModern/: theme.qss
skins/Phigros/: theme.qss
src/: CMakeLists.txt  main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h  AudioMetadata.cpp  AudioMetadata.h  BASSInitGuard.cpp  BASSInitGuard.h
src/core/: ConfigManager.cpp  ConfigManager.h  Constants.h  SignalBus.cpp  SignalBus.h
src/dsp/: DSPChain.cpp  DSPChain.h  DSPPluginLoader.cpp  DSPPluginLoader.h  IDSPEffect.cpp  IDSPEffect.h
src/dsp/builtin/: CompressorEffect.cpp  CompressorEffect.h  EqualizerEffect.cpp  EqualizerEffect.h  ReverbEffect.cpp  ReverbEffect.h
src/favorites/: FavoritesManager.cpp  FavoritesManager.h
src/lyrics/: LyricFetcher.cpp  LyricFetcher.h  LyricModel.cpp  LyricModel.h  LyricParser.cpp  LyricParser.h
src/playlist/: PlayModeEngine.cpp  PlayModeEngine.h  PlaylistManager.cpp  PlaylistManager.h  PlaylistModel.cpp  PlaylistModel.h
src/skin/: BackgroundManager.cpp  BackgroundManager.h  ColorExtractor.cpp  ColorExtractor.h  SkinManager.cpp  SkinManager.h  StyleSheetBuilder.cpp  StyleSheetBuilder.h  ThemeConfig.cpp  ThemeConfig.h
src/ui/: BackgroundDialog.cpp  BackgroundDialog.h  DSPPanel.cpp  DSPPanel.h  EqualizerWidget.cpp  EqualizerWidget.h  FavoritesPanel.cpp  FavoritesPanel.h  LyricPanel.cpp  LyricPanel.h  MainWindow.cpp  MainWindow.h  PlayerControlBar.cpp  PlayerControlBar.h  PlaylistDelegate.cpp  PlaylistDelegate.h  PlaylistPanel.cpp  PlaylistPanel.h  SkinSelectorDialog.cpp  SkinSelectorDialog.h  SpectrumWidget.cpp  SpectrumWidget.h  TrackInfoWidget.cpp  TrackInfoWidget.h  VisualArea.cpp  VisualArea.h
src/ui/widgets/: AnimatedButton.cpp  AnimatedButton.h  SeekSlider.cpp  SeekSlider.h  VolumeKnob.cpp  VolumeKnob.h
